# case_rentcars

./: LICENSE  Makefile  README.md  pyproject.toml
case_rentcars/: features.ipynb  plots.ipynb
case_rentcars/modeling/: train_ML.ipynb  train_NN.ipynb
docs/: mkdocs.yml
docs/docs/: index.md
models/: importancia_das_features.csv  metricas_desempenho.json  modelo_treinado.pkl  selected_features.txt
notebooks/: 00.unpacking_data.ipynb  01.EDA.ipynb  02.feature_engineering.ipynb  03.modeling_ML.ipynb  04.modeling_NN.ipynb  05.predict.ipynb
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
